feat(disk and swap): I/O

--- a/config.conf
+++ b/config.conf
@@ -1,4 +1,4 @@
-alignment top_right
+alignment top_left
 minimum_size 400
 gap_x 20
 gap_y 20
@@ -20,39 +20,39 @@ update_interval 1
 
 use_xft true
 xftalpha 0.1
-color0 white
-color1 EAEAEA
-color2 FFA300
-color3 grey
+color0 grey
+color1 FFA300
 
 TEXT
 
 # Data
-${color2}KERNEL $alignr ${color0}${kernel}
-${color2}UPTIME $alignr ${color0}${uptime}
-${color2}Public${color0}${alignr}${execi 3600 wget -q -O /dev/stdout http://checkip.dyndns.org/ | cut -d : -f 2- | cut -d \< -f -1}
-${color2}Local${color0}${alignr}${addrs enp39s0}
+${color1}KERNEL $alignr ${color0}${kernel}
+${color1}UPTIME $alignr ${color0}${uptime}
 
 # CPU
-${color2}CPU $alignr ${color0}${cpu cpu0}%
-${color3}${cpubar 16,}
+${color1}CPU $alignr ${color0}${cpu cpu0}%
+${color0}${cpubar 16,}
 ${top name 1} $alignr ${top cpu 1}%
 ${top name 2} $alignr ${top cpu 2}%
 ${top name 3} $alignr ${top cpu 3}%
 
 # RAM
-${color2}RAM $alignr ${color0}${memperc}% (${mem} / ${memmax})
-${color3}${membar 16,}
+${color1}RAM $alignr ${color0}${memperc}% (${mem} / ${memmax})
+${color0}${membar 16,}
 ${top_mem name 1} $alignr ${top_mem mem_res 1}
 ${top_mem name 2} $alignr ${top_mem mem_res 2}
 ${top_mem name 3} $alignr ${top_mem mem_res 3}
 
 # SWAP
-${color2}SWAP ${color0}${swapperc}% (${swap} / ${swapmax})
+${color1}SWAP $alignr ${color0}${swapperc}% (${swap} / ${swapmax})
+${color0}${swapbar 16,}
 
 # DISK
-${color2}DISK ${color0}${fs_used_perc /}% (${fs_used /} / ${fs_size /})
+${color1}DISK $alignr ${color0}${fs_used_perc /}% (${fs_used /} / ${fs_size /})
+${diskiograph_read 50,200}  ${diskiograph_write 50,200} 
 
 # NETWORK
-${color2}Download ${color0}${downspeedf enp39s0} KiB/s ${alignr} ${color2}Upload ${color0}${upspeedf enp39s0} KiB/s 
+${color1}PUBLIC${color0}${alignr}${execi 3600 wget -q -O /dev/stdout http://checkip.dyndns.org/ | cut -d : -f 2- | cut -d \< -f -1}
+${color1}LOCAL${color0}${alignr}${addrs enp39s0}
+${color1}DOWNLOAD ${color0}${downspeedf enp39s0} KiB/s ${alignr} ${color1}UPLOAD ${color0}${upspeedf enp39s0} KiB/s 
 ${downspeedgraph enp39s0 50,200}  ${upspeedgraph enp39s0 50,200} 
