--- a/config.conf
+++ b/config.conf
@@ -1,12 +1,7 @@
 alignment top_left
-minimum_size 400
-gap_x 20
-gap_y 20
-own_window true
-own_window_transparent true
-own_window_argb_visual true
-own_window_type desktop
-cpu_avg_samples 24
+gap_x 16
+gap_y 16
+cpu_avg_samples 16
 net_avg_samples 2
 xinerama_head 1
 draw_shades false
@@ -16,43 +11,91 @@ out_to_console false
 out_to_ncurses false
 out_to_stderr false
 show_graph_scale true
-update_interval 1
 
+own_window true
+own_window_hints undecorated,below,sticky,skip_taskbar,skip_pager
+own_window_transparent yes
+own_window_argb_visual yes
+
+update_interval 2
 use_xft true
-xftalpha 0.1
-color0 grey
+xftfont Source Raleway:size=10
+
+color0 white
 color1 FFA300
 
 TEXT
-
 # Data
-${color1}KERNEL $alignr ${color0}${kernel}
-${color1}UPTIME $alignr ${color0}${uptime}
+${color1}${alignc}${uid_name 1000}@${nodename}
+${color0}${voffset -25}__________________________${alignr}__________________________
+
+${color1}CPU ${color0}${goto 80}${execi 300 grep -i 'Model name' /proc/cpuinfo | grep 'model name' | sed -e 's/model name.*: //'| uniq | cut -c 1-18} ${goto 240}${color1}GPU ${color0}${alignr}${exec nvidia-smi --query-gpu=gpu_name --format=csv,noheader,nounits}
+${color1}Kernel ${goto 80}${color0}${kernel}${goto 240}${color1}GPU Driver${color0}${alignr}${alignr}${exec nvidia-smi --query-gpu=driver_version --format=csv,noheader,nounits}
+${color1}CPU Temp ${goto 80}${color0}${acpitemp} °C ${color1}${goto 240}GPU Temp${color0}${alignr}${exec nvidia-smi --query-gpu=temperature.gpu --format=csv,noheader,nounits} °C
+${color1}Ip ${color0}${goto 80}${execi 300 wget -q -O /dev/stdout http://checkip.dyndns.org/ | cut -d : -f 2- | cut -d \< -f -1}${color1}${goto 240}UPTIME ${alignr}${color0}${uptime_short}
+
 
 # CPU
-${color1}CPU $alignr ${color0}${cpu cpu0}%
-${color0}${cpubar 16,}
-${top name 1} $alignr ${top cpu 1}%
-${top name 2} $alignr ${top cpu 2}%
-${top name 3} $alignr ${top cpu 3}%
+${color1}${alignc}CPU ${color0} ${freq} MHz (${cpu}%)
+${color0}${voffset -25}________________________${alignr}________________________
+
+${color1}${top name 1}${alignr}${color0}${top cpu 1}% (${top pid 1})
+${color1}${top name 2}${alignr}${color0}${top cpu 2}% (${top pid 2})
+${color1}${top name 3}${alignr}${color0}${top cpu 3}% (${top pid 3})
+
 
 # RAM
-${color1}RAM $alignr ${color0}${memperc}% (${mem} / ${memmax})
-${color0}${membar 16,}
-${top_mem name 1} $alignr ${top_mem mem_res 1}
-${top_mem name 2} $alignr ${top_mem mem_res 2}
-${top_mem name 3} $alignr ${top_mem mem_res 3}
+${color1}${alignc}RAM ${color0}${mem} / ${memmax} (${memperc}%)
+${color0}${voffset -25}____________________${alignr}____________________
 
-# SWAP
-${color1}SWAP $alignr ${color0}${swapperc}% (${swap} / ${swapmax})
-${color0}${swapbar 16,}
+${color1}${top_mem name 1}${alignr}${color0}${top_mem mem_res 1} (${top_mem pid 1})
+${color1}${top_mem name 2}${alignr}${color0}${top_mem mem_res 2} (${top_mem pid 2})
+${color1}${top_mem name 3}${alignr}${color0}${top_mem mem_res 3} (${top_mem pid 3})
+
+
+# GPU
+${color1}${alignc}GPU ${color0}${exec nvidia-smi --query-gpu=clocks.current.graphics --format=csv,noheader} (${exec nvidia-smi --query-gpu=utilization.gpu --format=csv,noheader}) ${color1}GPU Memory${color0}${color0} ${exec nvidia-smi --query-gpu=memory.used --format=csv,noheader} / ${color0}${exec nvidia-smi --query-gpu=memory.total --format=csv,noheader}
+${color0}${voffset -25}_________${alignr}_________
+
+${color1}${exec node ~/.config/conky/NvidiaSmiProcess.js 0 name}${alignr}${color0}${exec node ~/.config/conky/NvidiaSmiProcess.js 0 mem} ${exec node ~/.config/conky/NvidiaSmiProcess.js 0 pid}
+${color1}${exec node ~/.config/conky/NvidiaSmiProcess.js 1 name}${alignr}${color0}${exec node ~/.config/conky/NvidiaSmiProcess.js 1 mem} ${exec node ~/.config/conky/NvidiaSmiProcess.js 1 pid}
+${color1}${exec node ~/.config/conky/NvidiaSmiProcess.js 2 name}${alignr}${color0}${exec node ~/.config/conky/NvidiaSmiProcess.js 2 mem} ${exec node ~/.config/conky/NvidiaSmiProcess.js 2 pid}
+
 
 # DISK
-${color1}DISK $alignr ${color0}${fs_used_perc /}% (${fs_used /} / ${fs_size /})
-${diskiograph_read 50,200}  ${diskiograph_write 50,200} 
+${color1}${alignc}DISK ${color0}${fs_used /} / ${fs_size /}
+${color0}${voffset -25}________________________${alignr}________________________
 
-# NETWORK
-${color1}PUBLIC${color0}${alignr}${execi 3600 wget -q -O /dev/stdout http://checkip.dyndns.org/ | cut -d : -f 2- | cut -d \< -f -1}
-${color1}LOCAL${color0}${alignr}${addrs enp39s0}
-${color1}DOWNLOAD ${color0}${downspeedf enp39s0} KiB/s ${alignr} ${color1}UPLOAD ${color0}${upspeedf enp39s0} KiB/s 
-${downspeedgraph enp39s0 50,200}  ${upspeedgraph enp39s0 50,200} 
+${diskiograph_read 40,250}  ${diskiograph_write 40,250} 
+${color1}READ ${color0}${diskio_read /dev/nvme0n1} ${alignr} ${color1}WRITE ${color0}${diskio_write /dev/nvme0n1}
+
+
+# ETH NETWORK
+${color1}${alignc}ETH ${color0}${addr enp2s0}
+${color0}${voffset -25}___________________________${alignr}___________________________
+
+${downspeedgraph enp2s0 40,250}  ${upspeedgraph enp2s0 40,250} 
+${color1}DOWNLOAD ${color0}${downspeedf enp2s0} KiB / ${totaldown enp2s0} ${alignr} ${color1}UPLOAD ${color0}${upspeedf enp2s0} KiB / ${totalup enp2s0}
+
+
+# WIFI NETWORK
+${color1}${alignc}WIFI ${color0}${addr wlp4s0}
+${color0}${voffset -25}__________________________${alignr}__________________________
+
+${downspeedgraph wlp4s0 40,250}  ${upspeedgraph wlp4s0 40,250} 
+${color1}DOWNLOAD ${color0}${downspeedf wlp4s0} KiB / ${totaldown wlp4s0} ${alignr} ${color1}UPLOAD ${color0}${upspeedf wlp4s0} KiB / ${totalup wlp4s0}
+
+
+# Connections
+${color1}${alignc}Connections ${color}(Inbound: ${tcp_portmon 1 65535 count} Outbound: ${tcp_portmon 1 65535 count})
+${color0}${voffset -25}_________________${alignr}_________________
+
+${color1}Outbound ${alignr} Remote Service/Port${color}
+${color0}${tcp_portmon 1 65535 rhost 0} ${alignr} ${tcp_portmon 1 65535 rservice 0}
+${color0}${tcp_portmon 1 65535 rhost 1} ${alignr} ${tcp_portmon 1 65535 rservice 1}
+${color0}${tcp_portmon 1 65535 rhost 2} ${alignr} ${tcp_portmon 1 65535 rservice 2}
+
+${color1}Inbound ${alignr} Local Service/Port ${color}
+${color0}${tcp_portmon 1 65535 rhost 0} ${alignr} ${tcp_portmon 1 65535 lservice 0}
+${color0}${tcp_portmon 1 65535 rhost 1} ${alignr} ${tcp_portmon 1 65535 lservice 1}
+${color0}${tcp_portmon 1 65535 rhost 2} ${alignr} ${tcp_portmon 1 65535 lservice 2}
